--- a/src/pages/Assistant/css/Assistant.css
+++ b/src/pages/Assistant/css/Assistant.css
@@ -8,8 +8,8 @@
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  /*.App-logo {*/
-  /*  animation: App-logo-spin infinite 20s linear;*/
+  /*.Assistant-logo {*/
+  /*  animation: Assistant-logo-spin infinite 20s linear;*/
   /*}*/
 }
 
